demo login api call

--- a/src/app/inout/inout.component.html
+++ b/src/app/inout/inout.component.html
@@ -8,9 +8,7 @@
     </div>
   </div>
 
-  <ion-grid>
-
-    <!-- Latitude -->
+  <!-- <ion-grid>
     <ion-row>
       <ion-col size="4" class="ion-text-center">
         Latitue
@@ -20,7 +18,6 @@
       </ion-col>
     </ion-row>
 
-    <!-- Longitude -->
     <ion-row>
       <ion-col size="4" class="ion-text-center">
         longitude
@@ -30,7 +27,6 @@
       </ion-col>
     </ion-row>
 
-    <!-- Accuracy -->
     <ion-row>
       <ion-col size="4" class="ion-text-center" color="medium">
         Accuracy
@@ -40,7 +36,6 @@
       </ion-col>
     </ion-row>
 
-    <!-- Address -->
     <ion-row>
       <ion-col size="4" class="ion-text-center">
         Address
@@ -51,6 +46,6 @@
     </ion-row>
 
   </ion-grid>
+  <ion-button (click)="getGeolocation()" color="success" expand="full">Get Location</ion-button> -->
 
-  <ion-button (click)="getGeolocation()" color="success" expand="full">Get Location</ion-button>
 </ion-content>
